@@ -1,4 +1,13 @@
 2006-07-19 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/Dialog_Progress.h,
+	  include/Operation.h,
+	  src/Dialog_Progress.cc,
+	  src/GParted_Core.cc: show warning in progressfeedback if a certain
+	  action is n/a. Of course we only allow these actions if the results
+	  are non-lethal.
+
+2006-07-19 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
 	* enabled move support for all the filesystems. Also made some small
 	  changes to the logic which determines if copy is allowed.
